--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 							</div>
 							<div class="main--nav__item button--metaverse soon">
 								<span>METAVERSE</span>
+								<span class="soon--icon">coming soon</span>
 							</div>
 						</div>
 						<div class="main--nav__social">
@@ -103,6 +104,7 @@
 						</div>
 					</div>
 					<div class="main--modals">
+						<!-- кнопка mine -->
 						<div class="main--modals__block mine--pet">
 							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-mine.png);">
@@ -115,7 +117,7 @@
 									</div>
 								</div>
 								<div class="main--modals__carts">
-									<a href="#indigo" class="main--modals__cart">
+									<a href="#indigo" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-1.png" alt="#">
 										</div>
@@ -127,7 +129,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#simba" class="main--modals__cart">
+									<a href="#simba" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-2.png" alt="#">
 										</div>
@@ -139,7 +141,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#kumamoto" class="main--modals__cart">
+									<a href="#kumamoto" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-3.png" alt="#">
 										</div>
@@ -151,7 +153,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#indigo" class="main--modals__cart">
+									<a href="#indigo" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-1.png" alt="#">
 										</div>
@@ -163,7 +165,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#simba" class="main--modals__cart">
+									<a href="#simba" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-2.png" alt="#">
 										</div>
@@ -175,7 +177,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#kumamoto" class="main--modals__cart">
+									<a href="#kumamoto" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-3.png" alt="#">
 										</div>
@@ -253,7 +255,7 @@
 									</div>
 								</div>
 								<div class="main--modals__carts">
-									<a href="#aviarius" class="main--modals__cart">
+									<a href="#aviarius" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-1.png" alt="#">
 										</div>
@@ -268,7 +270,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#pyroterra" class="main--modals__cart">
+									<a href="#pyroterra" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-2.png" alt="#">
 										</div>
@@ -283,7 +285,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#aviarius" class="main--modals__cart">
+									<a href="#aviarius" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-1.png" alt="#">
 										</div>
@@ -298,7 +300,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#pyroterra" class="main--modals__cart">
+									<a href="#pyroterra" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-2.png" alt="#">
 										</div>
@@ -313,7 +315,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#aviarius" class="main--modals__cart">
+									<a href="#aviarius" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-1.png" alt="#">
 										</div>
@@ -328,7 +330,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="#pyroterra" class="main--modals__cart">
+									<a href="#pyroterra" class="main--modals__cart choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-2.png" alt="#">
 										</div>
@@ -435,6 +437,300 @@
 								<button class="succeeded--wrapper__button">go back!</button>
 							</div>
 						</div>
+						<!-- завершение mine -->
+
+						<!-- кнопка mint -->
+						<div class="main--modals__block mint--choose">
+							<div class="main--modals__block--wrapper mint--wrapper" style="background-image: url(img/bg-mint.png);">
+								<div class="mint--choose__cart">
+									<div class="mint--choose__title">CHARACTER</div>
+									<div class="mint--choose__image" style="background-image: url(img/mint/bg.png);">
+										<img src="img/mint/mint-pet.png" alt="#">
+										<img src="img/mint/after.png" alt="#">
+									</div>
+									<div class="mint--choose__buttons">
+										<span class="mint--choose__button mint--pet">MINT</span>
+										<span class="mint--choose__button mint--pets">MINT X3</span>
+									</div>
+									<div class="mint--choose__price">
+										<span>CURREN PRICE: X $ZOO</span>
+									</div>
+								</div>
+								<div class="mint--choose__cart">
+									<div class="mint--choose__title">PLANETS</div>
+									<div class="mint--choose__image" style="background-image: url(img/mint/bg.png);">
+										<img src="img/mint/mint-planet.png" alt="#">
+										<img src="img/mint/after.png" alt="#">
+									</div>
+									<div class="mint--choose__buttons">
+										<span class="mint--choose__button mint--planet">MINT</span>
+										<span class="mint--choose__button mint--planets">MINT X3</span>
+									</div>
+									<div class="mint--choose__price">
+										<span>CURREN PRICE: X $ZOO</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main--modals__block mint--choose__pet choose__pet mine--pet__choose">
+							<div class="main--modals__block--back mint--back__pet" style="background-image: url(img/arrow-back.png);"></div>
+							<div class="main--modals__block--wrapper mint--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
+								<div class="main--modals__cart">
+									<div class="main--modals__cart--image">
+										<img src="img/pets/pet-1.png" alt="#">
+									</div>
+									<div class="main--modals__cart--rarity">
+										<div class="main--modals__cart--title">Rainbow</div>
+										<div class="main--modals__cart--rarity__luck">
+											<span>luck:</span>
+											<span>29</span>
+										</div>
+									</div>
+								</div>
+								<button class="main--modals__choose mint--tonft">TO MY NFT</button>
+							</div>
+						</div>
+						<div class="main--modals__block mint--choose__pets choose__pets mine--pet__choose">
+							<div class="main--modals__block--back mint--back__pets" style="background-image: url(img/arrow-back.png);"></div>
+							<div class="main--modals__block--wrapper mint--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
+								<div class="main--modals__arrows">
+									<div class="main--modals__arrows--left"><img src="img/mint/arrow-left.png" alt="#"></div>
+									<div class="main--modals__arrows--right"><img src="img/mint/arrow.png" alt="#"></div>
+								</div>
+								<div class="main--modals__carts">
+									<div class="main--modals__cart not--active">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-1.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</div>
+									<div class="main--modals__cart active">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-2.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</div>
+									<div class="main--modals__cart not--active">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-3.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<button class="main--modals__choose mint--tonft">TO MY NFT</button>
+							</div>
+						</div>
+						<div class="main--modals__block mint--choose__pet choose__planet mine--pet__choose">
+							<div class="main--modals__block--back mint--back__planet" style="background-image: url(img/arrow-back.png);"></div>
+							<div class="main--modals__block--wrapper mint--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
+								<div class="main--modals__cart">
+									<div class="main--modals__cart--image">
+										<img src="img/planets/planet-1.png" alt="#">
+									</div>
+									<div class="main--modals__cart--rarity">
+										<div class="main--modals__cart--title">
+												<span>Luck:</span>
+												<span>23</span>
+										</div>
+										<div class="main--modals__cart--rarity__luck">
+											<span>resource:</span>
+											<span>2</span>
+										</div>
+									</div>
+								</div>
+								<button class="main--modals__choose mint--tonft">TO MY NFT</button>
+							</div>
+						</div>
+						<div class="main--modals__block mint--choose__pets choose__planets mine--pet__choose">
+							<div class="main--modals__block--back mint--back__planets" style="background-image: url(img/arrow-back.png);"></div>
+							<div class="main--modals__block--wrapper mint--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
+								<div class="main--modals__arrows">
+									<div class="main--modals__arrows--left"><img src="img/mint/arrow-left.png" alt="#"></div>
+									<div class="main--modals__arrows--right"><img src="img/mint/arrow.png" alt="#"></div>
+								</div>
+								<div class="main--modals__carts">
+									<div class="main--modals__cart not--active">
+										<div class="main--modals__cart--image">
+											<img src="img/planets/planet-1.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">
+													<span>Luck:</span>
+													<span>23</span>
+											</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>resource:</span>
+												<span>2</span>
+											</div>
+										</div>
+									</div>
+									<div class="main--modals__cart active">
+										<div class="main--modals__cart--image">
+											<img src="img/planets/planet-2.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">
+													<span>Luck:</span>
+													<span>23</span>
+											</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>resource:</span>
+												<span>2</span>
+											</div>
+										</div>
+									</div>
+									<div class="main--modals__cart not--active">
+										<div class="main--modals__cart--image">
+											<img src="img/planets/planet-3.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">
+													<span>Luck:</span>
+													<span>23</span>
+											</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>resource:</span>
+												<span>2</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<button class="main--modals__choose mint--tonft">TO MY NFT</button>
+							</div>
+						</div>
+						<!-- завершение mint -->
+
+						<!-- кнопка my nft -->
+						<div class="main--modals__block my--nft">
+							<div class="main--modals__block--back nft--back" style="background-image: url(img/arrow-back.png);"></div>
+							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-mine.png);">
+								<div class="main--modals__header">
+									<div class="main--modals__title">MY NFT</div>
+									<div class="main--modals__sort--wrapper">
+										<div class="main--modals__buttons">
+											<button class="pets">pets</button>
+											<button class="planets">planets</button>
+										</div>
+										<div class="main--modals__sort">
+											<div class="main--modals__sort--item active"><span>RARITY</span></div>
+											<div class="main--modals__sort--item"><span>LUCK</span></div>
+											<div class="main--modals__sort--item"><span>AVAILABility</span></div>
+										</div>
+									</div>
+								</div>
+								<div class="main--modals__carts">
+									<a href="#indigo1" class="main--modals__cart my--nft__choosen">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-1.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</a>
+									<a href="#simba1" class="main--modals__cart my--nft__choosen">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-2.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</a>
+									<a href="#kumamoto1" class="main--modals__cart my--nft__choosen">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-3.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</a>
+									<a href="#indigo1" class="main--modals__cart my--nft__choosen">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-1.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</a>
+									<a href="#simba1" class="main--modals__cart my--nft__choosen">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-2.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</a>
+									<a href="#kumamoto1" class="main--modals__cart my--nft__choosen">
+										<div class="main--modals__cart--image">
+											<img src="img/pets/pet-3.png" alt="#">
+										</div>
+										<div class="main--modals__cart--rarity">
+											<div class="main--modals__cart--title">Rainbow</div>
+											<div class="main--modals__cart--rarity__luck">
+												<span>luck:</span>
+												<span>29</span>
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="main--modals__block mine--pet__choose nft--pet">
+							<div class="main--modals__block--wrapper nft--wrapper" style="background-image: url(img/bg-pet.png);">
+								<div class="main--modals__cart">
+									<div class="main--modals__cart--image">
+										<img src="img/pets/pet-1.png" alt="#">
+									</div>
+									<div class="main--modals__cart--rarity">
+										<div class="main--modals__cart--title">Rainbow</div>
+										<div class="main--modals__cart--rarity__luck">
+											<span>luck:</span>
+											<span>29</span>
+										</div>
+									</div>
+								</div>
+								<button class="main--modals__choose go--back">GO BACK</button>
+							</div>
+						</div>
+						<!-- завершение my nft -->
 					</div>
 				</div>
 			</div>
