--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="header--wrapper__icons">
 							<div class="header--wrapper__icon wallet">
 								<img src="img/header-icons/wallet.png" alt="#">
-								<span>by ESHIB</span>
+								<span>buy $ZOO</span>
 							</div>
 							<div class="header--wrapper__icon cart">
 								<img src="img/header-icons/cart.png" alt="#">
@@ -74,9 +74,11 @@
 						<div class="main--nav__list">
 							<div class="main--nav__item button--main">
 								<span>MAIN</span>
+								<img src="img/universe-mini.png" alt="">
 							</div>
 							<div class="main--nav__item button--mint">
 								<span>MINT</span>
+								<img src="img/universe-mini.png" alt="">
 							</div>
 							<div class="main--nav__item button--mine">
 								<span>MINE</span>
@@ -84,6 +86,7 @@
 							</div>
 							<div class="main--nav__item button--nft">
 								<span>MY NFT</span>
+								<img src="img/universe-mini.png" alt="">
 							</div>
 							<div class="main--nav__item button--lands soon">
 								<span>LANDS</span>
@@ -107,7 +110,7 @@
 						<!-- кнопка mine -->
 						<div class="main--modals__block mine--pet">
 							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
-							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-mine.png);">
+							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-mine-1.png);">
 								<div class="main--modals__header">
 									<div class="main--modals__title">choose your pet</div>
 									<div class="main--modals__sort">
@@ -193,6 +196,7 @@
 							</div>
 						</div>
 						<div class="main--modals__block mine--pet__choose choose--pet" id="indigo">
+							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__cart">
 									<div class="main--modals__cart--image">
@@ -210,6 +214,7 @@
 							</div>
 						</div>
 						<div class="main--modals__block mine--pet__choose choose--pet" id="simba">
+							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__cart">
 									<div class="main--modals__cart--image">
@@ -227,6 +232,7 @@
 							</div>
 						</div>
 						<div class="main--modals__block mine--pet__choose choose--pet" id="kumamoto">
+							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__cart">
 									<div class="main--modals__cart--image">
@@ -245,7 +251,7 @@
 						</div>
 						<div class="main--modals__block mine--planet">
 							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
-							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-mine.png);">
+							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-mine-2.png);">
 								<div class="main--modals__header">
 									<div class="main--modals__title">choose your planet</div>
 									<div class="main--modals__sort">
@@ -349,6 +355,7 @@
 							</div>
 						</div>
 						<div class="main--modals__block mine--pet__choose choose--planet" id="aviarius">
+							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__cart">
 									<div class="main--modals__cart--image">
@@ -366,6 +373,7 @@
 							</div>
 						</div>
 						<div class="main--modals__block mine--pet__choose choose--planet" id="pyroterra">
+							<div class="main--modals__block--back" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__cart">
 									<div class="main--modals__cart--image">
@@ -407,6 +415,7 @@
 										<div class="main--modals__winrate--image">
 											<img src="img/rocket.png" alt="#">
 										</div>
+										<div class="main--modals__winrate--reward">Reward Rate: $ZOO</div>
 										<button class="main--modals__winrate--button">start</button>
 									</div>
 									<div class="main--modals__cart">
@@ -434,7 +443,7 @@
 						</div>
 						<div class="main--modals__block end loose">
 							<div class="main--modals__block--wrapper loose--wrapper" style="background-image: url(img/loose.png);">
-								<button class="succeeded--wrapper__button">go back!</button>
+								<button class="succeeded--wrapper__button">go back</button>
 							</div>
 						</div>
 						<!-- завершение mine -->
@@ -453,7 +462,7 @@
 										<span class="mint--choose__button mint--pets">MINT X3</span>
 									</div>
 									<div class="mint--choose__price">
-										<span>CURREN PRICE: X $ZOO</span>
+										<span>CURREnt PRICE: X $ZOO</span>
 									</div>
 								</div>
 								<div class="mint--choose__cart">
@@ -467,7 +476,7 @@
 										<span class="mint--choose__button mint--planets">MINT X3</span>
 									</div>
 									<div class="mint--choose__price">
-										<span>CURREN PRICE: X $ZOO</span>
+										<span>CURREnt PRICE: X $ZOO</span>
 									</div>
 								</div>
 							</div>
@@ -494,11 +503,11 @@
 							<div class="main--modals__block--back mint--back__pets" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mint--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__arrows">
-									<div class="main--modals__arrows--left"><img src="img/mint/arrow-left.png" alt="#"></div>
-									<div class="main--modals__arrows--right"><img src="img/mint/arrow.png" alt="#"></div>
+									<div class="main--modals__arrows--left pet--left"><img src="img/mint/arrow-left.png" alt="#"></div>
+									<div class="main--modals__arrows--right pet--right"><img src="img/mint/arrow.png" alt="#"></div>
 								</div>
 								<div class="main--modals__carts">
-									<div class="main--modals__cart not--active">
+									<div class="main--modals__cart mint--carts">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-1.png" alt="#">
 										</div>
@@ -510,7 +519,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="main--modals__cart active">
+									<div class="main--modals__cart mint--carts active">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-2.png" alt="#">
 										</div>
@@ -522,7 +531,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="main--modals__cart not--active">
+									<div class="main--modals__cart mint--carts">
 										<div class="main--modals__cart--image">
 											<img src="img/pets/pet-3.png" alt="#">
 										</div>
@@ -563,11 +572,11 @@
 							<div class="main--modals__block--back mint--back__planets" style="background-image: url(img/arrow-back.png);"></div>
 							<div class="main--modals__block--wrapper mint--wrapper mine--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__arrows">
-									<div class="main--modals__arrows--left"><img src="img/mint/arrow-left.png" alt="#"></div>
-									<div class="main--modals__arrows--right"><img src="img/mint/arrow.png" alt="#"></div>
+									<div class="main--modals__arrows--left planet--left"><img src="img/mint/arrow-left.png" alt="#"></div>
+									<div class="main--modals__arrows--right planet--right"><img src="img/mint/arrow.png" alt="#"></div>
 								</div>
 								<div class="main--modals__carts">
-									<div class="main--modals__cart not--active">
+									<div class="main--modals__cart mint--planets--choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-1.png" alt="#">
 										</div>
@@ -582,7 +591,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="main--modals__cart active">
+									<div class="main--modals__cart mint--planets--choosen active">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-2.png" alt="#">
 										</div>
@@ -597,7 +606,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="main--modals__cart not--active">
+									<div class="main--modals__cart mint--planets--choosen">
 										<div class="main--modals__cart--image">
 											<img src="img/planets/planet-3.png" alt="#">
 										</div>
@@ -661,63 +670,32 @@
 											</div>
 										</div>
 									</a>
-									<a href="#kumamoto1" class="main--modals__cart my--nft__choosen">
-										<div class="main--modals__cart--image">
-											<img src="img/pets/pet-3.png" alt="#">
-										</div>
-										<div class="main--modals__cart--rarity">
-											<div class="main--modals__cart--title">Rainbow</div>
-											<div class="main--modals__cart--rarity__luck">
-												<span>luck:</span>
-												<span>29</span>
-											</div>
-										</div>
-									</a>
-									<a href="#indigo1" class="main--modals__cart my--nft__choosen">
-										<div class="main--modals__cart--image">
-											<img src="img/pets/pet-1.png" alt="#">
-										</div>
-										<div class="main--modals__cart--rarity">
-											<div class="main--modals__cart--title">Rainbow</div>
-											<div class="main--modals__cart--rarity__luck">
-												<span>luck:</span>
-												<span>29</span>
-											</div>
-										</div>
-									</a>
-									<a href="#simba1" class="main--modals__cart my--nft__choosen">
-										<div class="main--modals__cart--image">
-											<img src="img/pets/pet-2.png" alt="#">
-										</div>
-										<div class="main--modals__cart--rarity">
-											<div class="main--modals__cart--title">Rainbow</div>
-											<div class="main--modals__cart--rarity__luck">
-												<span>luck:</span>
-												<span>29</span>
-											</div>
-										</div>
-									</a>
-									<a href="#kumamoto1" class="main--modals__cart my--nft__choosen">
-										<div class="main--modals__cart--image">
-											<img src="img/pets/pet-3.png" alt="#">
-										</div>
-										<div class="main--modals__cart--rarity">
-											<div class="main--modals__cart--title">Rainbow</div>
-											<div class="main--modals__cart--rarity__luck">
-												<span>luck:</span>
-												<span>29</span>
-											</div>
-										</div>
-									</a>
 								</div>
 							</div>
 						</div>
 
-						<div class="main--modals__block mine--pet__choose nft--pet">
+						<div class="main--modals__block mine--pet__choose nft--pet" id="indigo1">
 							<div class="main--modals__block--wrapper nft--wrapper" style="background-image: url(img/bg-pet.png);">
 								<div class="main--modals__cart">
 									<div class="main--modals__cart--image">
 										<img src="img/pets/pet-1.png" alt="#">
+									</div>
+									<div class="main--modals__cart--rarity">
+										<div class="main--modals__cart--title">Rainbow</div>
+										<div class="main--modals__cart--rarity__luck">
+											<span>luck:</span>
+											<span>29</span>
+										</div>
+									</div>
+								</div>
+								<button class="main--modals__choose go--back">GO BACK</button>
+							</div>
+						</div>
+						<div class="main--modals__block mine--pet__choose nft--pet" id="simba1">
+							<div class="main--modals__block--wrapper nft--wrapper" style="background-image: url(img/bg-pet.png);">
+								<div class="main--modals__cart">
+									<div class="main--modals__cart--image">
+										<img src="img/pets/pet-2.png" alt="#">
 									</div>
 									<div class="main--modals__cart--rarity">
 										<div class="main--modals__cart--title">Rainbow</div>
